--- a/Trip_Buddy_v0/app/src/main/res/values/strings.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">633695070165231</string>
+    <string name="title_activity_new_trip">New Trip</string>
 </resources>
