--- a/Trip_Buddy_v0/app/src/main/res/values/strings.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/strings.xml
@@ -133,4 +133,8 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back">Back</string>
+
 </resources>
